public/stylesheets/style.css
body {
    padding-top: 50px;
    font-family: "Helvetica Neue", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial;
    width: 100%
}

a:hover {
    border-bottom: thick solid hotpink;
}

.header {
    padding-bottom: 10px;
}

.google-form {
    width:100%;
    height: 54em;
}

.google-form-container {
    background: url(../images/spin.gif) center center no-repeat;
    height: 24em;
}

.main {
    text-align: center;
    width: 100%;
}

.banner {
    width: 38%;
    margin: 0 auto;
    padding-top: 1.5em;
    font-size: 7em;
    color: white;
    letter-spacing: -0.02em;
    text-transform: uppercase;
}

.banner-internal {
    text-align: left;
    font-weight: lighter;
    margin-bottom: -0.2em;

}

.banner-internal-bold {
    font-weight: bold;
    background-color: hotpink;
}

.navbar {
    height: 4em;
}

.container-fluid {
    background-color: white;
    height: 100%;
    font-size: x-small;
    text-transform: uppercase;
}

.navbar-header {
    padding: 0 2em ;
    height:100%;
}

.navbar-brand:hover {
    border-bottom: none;
}

.navbar-right {
    padding-right: 2.5em;
}

.navbar >.container-fluid .navbar-brand {
    font-weight: bolder;
    font-size: 1.3em;
}

.navbar-collapse {
    background-color: white;
}

#bs-example-navbar-collapse-1 {
    padding-left: 4em;
}

.in a:hover {
    border: none;
}

.home-page {
    background: url(../images/background-mini.jpg) center center no-repeat;
    background-size: cover;
    height: 54em;
}

.contact-page {
    background: url(../images/contact-mini.jpg) center center no-repeat;
    background-size: cover;
    height: 54em;
    opacity: 0.9;
}

.resources-page {
    background: url(../images/construction-work-carpenter-tools.jpg) center center repeat;
    background-size: cover;
    height: 150em;
    opacity: 0.9;
}

.contact-text-box {
    width:45%;
    color: white;
    margin: 0 auto;
    font-size: 2em;
    padding-top: 2em;
}

.hi-there {
    font-size: 3em;
    background-color: hotpink;
    margin: 1em;
    font-weight: bolder;
    text-transform: uppercase;
}

.contact-email {
    border-bottom: 0.2em solid hotpink;
    width: 40%;
    margin: 1.4em auto;
}

.resources-container {
    width:95%;
    margin: 0 auto;
    padding: 5em 0;
}

.row > div {
    height:500px;
    margin-bottom: 6em;
}

.row .thumbnail {
    height: 100%;
    padding:0;
    border-radius: 0;
}

.row > .col-md-6 {
    height: 600px;
}

.image-thumbnail {
    height:45%;
    overflow: hidden;
}

.resource-type {
    background-color: hotpink;
    color: white;
    font-weight: bolder;
    font-size: 1.3em;
    height: 1.5em;
    margin-bottom: 0.5em;
    text-transform: uppercase;
}

.caption {
    height: 51%;
}

.caption > h3 {
    text-transform: uppercase;
    font-size: 1.3em;
    height: 20%;
}

.caption > .caption-description {
    height: 45%;
}

.caption > .caption-button {
    height: 20%;
}

a.btn {
    border-radius: 0;
    color: grey;
}


.why-page-header {
    background: url(../images/pexels-photo.jpeg) center center no-repeat;
    background-size: cover;
    height: 34em;
    opacity: 0.9;
}

.why-page-header-title {
    color: white;
    font-weight: bold;
    margin-top: 1em;
    background-color: hotpink;
    width: 10em;
    margin-left: -10em;
}

.questionnaire-page-header {
    background: url(../images/border.jpg) center center no-repeat;
    background-size: cover;
    height: 2em;
    opacity: 0.9;
}

